--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "express": "4.17.1",
+    "http-errors": "^1.8.1",
+    "joi": "^17.5.0",
     "morgan": "1.10.0",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
